--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,6 +15,8 @@ jobs:
             java-version: '17'
             distribution: 'temurin'
             cache: 'gradle'
+        - name: Grant execute permission for gradlew
+          run: chmod +x gradlew
         - name: Run assemble gradle task
           run: ./gradlew assemble
 
@@ -36,6 +38,8 @@ jobs:
           java-version: ${{ matrix.java }}
           distribution: 'temurin'
           cache: gradle
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
       - name: Build with Gradle
         run: ./gradlew test
 
