--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -54,7 +54,10 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
-        run: ./gradlew test --stacktrace --warning-mode all
+        run: ./gradlew test --stacktrace >> $GITHUB_OUTPUT
+        id: run_tests
+      - name: Print output
+        run: echo $GITHUB_OUTPUT
 
   success:
     runs-on: ubuntu-latest
