--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,8 +46,7 @@ jobs:
         with:
           python-version: 3.8
       - name: Install python dependencies
-          run: |
-            python -m pip install coverage
+        run: python -m pip install coverage
       - name: Setup the Java JDK 17 and cache gradle dependencies ${{ matrix.java }}
         uses: actions/setup-java@v3
         with:
