--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,8 @@
 [versions]
 kotest = "5.5.1"
 kotlin = "1.7.20"
+gitSemVer = "1.1.5"
+dokka = "1.8.10"
 
 [libraries]
 kotest-junit5-jvm = { module = "io.kotest:kotest-runner-junit5-jvm", version.ref = "kotest" }
@@ -15,5 +17,11 @@ kotlin-testing = [
 ]
 
 [plugins]
-gitSemVer = "org.danilopianini.git-sensitive-semantic-versioning-gradle-plugin:0.3.20"
-dokka = "org.jetbrains.dokka:1.7.20"
+gitSemVer = { id = "org.danilopianini.git-sensitive-semantic-versioning-gradle-plugin", version.ref = "gitSemVer" }
+dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
+publishOnCentral = { id = "org.danilopianini.publish-on-central", version = "4.0.1" }
+gradle-plugin-publish = { id = "com.gradle.plugin-publish", version = "1.1.0" }
+kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+kotlin-qa = { id = "org.danilopianini.gradle-kotlin-qa", version = "0.29.2" }
+multiJvmTesting = { id = "org.danilopianini.multi-jvm-test-plugin", version = "0.4.20" }
+taskTree = { id = "com.dorongold.task-tree", version = "2.1.1" }
