--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -86,7 +86,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - compile
-      - test
+      - release
     if: >-
       always() && (
         contains(join(needs.*.result, ','), 'failure')
