--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -57,11 +57,35 @@ jobs:
         run: ./gradlew test --stacktrace
         id: run_tests
 
+  release:
+    runs-on: ubuntu-latest
+    needs:
+      - test
+    if: github.ref == 'refs/heads/main'
+    concurrency:
+      group: release
+      cancel-in-progress: false
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
+      - name: set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: gradle
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Release
+        run: |
+          npm install
+          npx semantic-release
   success:
     runs-on: ubuntu-latest
     needs:
       - compile
-      - test
+      - release
     if: >-
       always() && (
         contains(join(needs.*.result, ','), 'failure')
