ci: added new push configuration

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,6 +2,10 @@ name: CI/CD PyTestPlugin
 
 on:
   push:
+    paths-ignore:
+      - '**/README.md'
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
